--- a/spring/pom.xml
+++ b/spring/pom.xml
@@ -20,6 +20,11 @@
             <version>${spring.version}</version>
         </dependency>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+        <dependency>
             <groupId>org.sterl.pmw</groupId>
             <artifactId>pmw-quartz</artifactId>
         </dependency>
