--- a/pom.xml
+++ b/pom.xml
@@ -51,7 +51,6 @@
 
     <modules>
         <module>core</module>
-        <module>quartz</module>
         <module>spring</module>
     </modules>
 
@@ -102,6 +101,11 @@
             <dependency>
                 <groupId>com.fasterxml.jackson.core</groupId>
                 <artifactId>jackson-databind</artifactId>
+                <version>${jackson.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-annotations</artifactId>
                 <version>${jackson.version}</version>
             </dependency>
             <dependency>
