--- a/spring/src/test/resources/application.yml
+++ b/spring/src/test/resources/application.yml
@@ -1,11 +1,9 @@
-springdoc:
-  show:
-    actuator: true
 spring:
   jpa:
     hibernate:
       ddl-auto: update
     open-in-view: false
+
   quartz:
     job-store-type: jdbc
     wait-for-jobs-to-complete-on-shutdown: false
@@ -19,14 +17,6 @@ spring:
       org.quartz.scheduler.idleWaitTime: 5000
 
   datasource:
-    url: jdbc:h2:file:./pmw-example
+    url: jdbc:h2:mem:testdb
     username: sa
     password: 
-  h2:
-    console:
-      enabled: true
-      path: /h2
-management:
-  endpoint:
-    health:
-      show-details: always
