--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,17 @@
         <relativePath />
     </parent>
 
+    <distributionManagement>
+        <snapshotRepository>
+            <id>ossrh</id>
+            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+        </snapshotRepository>
+        <repository>
+            <id>ossrh</id>
+            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+        </repository>
+    </distributionManagement>
+
     <properties>
         <pmw.version>1.0.1-SNAPSHOT</pmw.version>
         <java.version>17</java.version>
