--- a/example/pom.xml
+++ b/example/pom.xml
@@ -23,7 +23,7 @@
         <dependency>
             <groupId>org.sterl.pmw</groupId>
             <artifactId>pmw-spring</artifactId>
-            <version>1.0.1-SNAPSHOT</version>
+            <version>1.1.0</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
