- cleanup versions - fixed naming of step

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -44,12 +44,12 @@
         <dependency>
             <groupId>net.sourceforge.plantuml</groupId>
             <artifactId>plantuml</artifactId>
-            <version>1.2022.7</version>
+            <version>${plantuml.version}</version>
         </dependency>
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
-            <version>1.2.11</version>
+            <version>1.4.0</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
