--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>org.sterl.pmw</groupId>
     <artifactId>pmw-root</artifactId>
-    <version>1.1.1</version>
+    <version>1.1.2-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <inceptionYear>2022</inceptionYear>
@@ -49,7 +49,7 @@
     </distributionManagement>
 
     <properties>
-        <pmw.version>1.1.1</pmw.version>
+        <pmw.version>1.1.2-SNAPSHOT</pmw.version>
         <java.version>17</java.version>
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
