--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
             <distribution>repo</distribution>
         </license>
     </licenses>
-    
+
     <scm>
         <url>https://github.com/sterlp/pmw</url>
     </scm>
@@ -57,7 +57,7 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
         <plantuml.version>1.2022.7</plantuml.version>
-        <spring.version>2.7.3</spring.version>
+        <spring.version>2.7.4</spring.version>
         <lombok.version>1.18.24</lombok.version>
         <h2.version>2.1.214</h2.version>
         <jackson.version>2.13.4</jackson.version>
@@ -95,6 +95,18 @@
                 <groupId>org.sterl.pmw</groupId>
                 <artifactId>pmw-spring</artifactId>
                 <version>${pmw.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-data-jpa</artifactId>
+                <version>${spring.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-test</artifactId>
+                <version>${spring.version}</version>
+                <scope>test</scope>
             </dependency>
 
             <dependency>
@@ -238,7 +250,7 @@
             </plugins>
         </pluginManagement>
     </build>
-    
+
     <profiles>
         <profile>
             <id>release</id>
@@ -288,5 +300,5 @@
             </build>
         </profile>
     </profiles>
-    
+
 </project>
