--- a/spring/pom.xml
+++ b/spring/pom.xml
@@ -106,6 +106,13 @@
             <artifactId>awaitility</artifactId>
             <scope>test</scope>
         </dependency>
+        
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.4.14</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
     <build>
