--- a/pom.xml
+++ b/pom.xml
@@ -49,7 +49,7 @@
     </distributionManagement>
 
     <properties>
-        <pmw.version>1.1.2-SNAPSHOT</pmw.version>
+        <pmw.version>1.2.0</pmw.version>
         <java.version>17</java.version>
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
