--- a/pom.xml
+++ b/pom.xml
@@ -49,7 +49,6 @@
     </distributionManagement>
 
     <properties>
-        <pmw.version>1.2.0</pmw.version>
         <java.version>17</java.version>
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
@@ -75,12 +74,12 @@
             <dependency>
                 <groupId>org.sterl.pmw</groupId>
                 <artifactId>pmw-core</artifactId>
-                <version>${pmw.version}</version>
+                <version>${project.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.sterl.pmw</groupId>
                 <artifactId>pmw-core</artifactId>
-                <version>${pmw.version}</version>
+                <version>${project.version}</version>
                 <classifier>tests</classifier>
                 <type>test-jar</type>
                 <scope>test</scope>
@@ -89,18 +88,18 @@
             <dependency>
                 <groupId>org.sterl.pmw</groupId>
                 <artifactId>pmw-quartz</artifactId>
-                <version>${pmw.version}</version>
+                <version>${project.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.sterl.pmw</groupId>
                 <artifactId>pmw-spring</artifactId>
-                <version>${pmw.version}</version>
+                <version>${project.version}</version>
             </dependency>
 
             <dependency>
                 <groupId>org.apache.commons</groupId>
                 <artifactId>commons-lang3</artifactId>
-                <version>3.12.0</version>
+                <version>3.14.0</version>
             </dependency>
 
             <dependency>
