--- a/spring/pom.xml
+++ b/spring/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>org.sterl.pmw</groupId>
         <artifactId>pmw-root</artifactId>
-        <version>1.2.2-SNAPSHOT</version>
+        <version>1.2.2</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
