--- a/pom.xml
+++ b/pom.xml
@@ -49,7 +49,7 @@
     </distributionManagement>
 
     <properties>
-        <java.version>17</java.version>
+        <java.version>21</java.version>
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -62,6 +62,8 @@
         <jackson.version>2.18.2</jackson.version>
 
         <pmd.version>7.2.0</pmd.version>
+        
+        <spring.persistent.tasks.version>1.6.0-SNAPSHOT</spring.persistent.tasks.version>
     </properties>
 
     <modules>
