--- a/spring/pom.xml
+++ b/spring/pom.xml
@@ -13,7 +13,7 @@
 
     <artifactId>pmw-spring</artifactId>
     <description>Poor mans workflow Spring integration code</description>
-    
+
     <inceptionYear>2022</inceptionYear>
 
     <licenses>
@@ -23,7 +23,7 @@
             <distribution>repo</distribution>
         </license>
     </licenses>
-    
+
     <scm>
         <url>https://github.com/sterlp/pmw</url>
     </scm>
@@ -51,7 +51,7 @@
             <artifactId>spring-boot-starter-actuator</artifactId>
             <version>${spring.version}</version>
         </dependency>
-        
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
@@ -88,8 +88,14 @@
             <version>${spring.persistent.tasks.version}</version>
             <scope>test</scope>
         </dependency>
-        
-        
+
+        <dependency>
+            <groupId>org.awaitility</groupId>
+            <artifactId>awaitility</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
