--- a/example/pom.xml
+++ b/example/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.2.2</version>
+        <version>3.3.8</version>
         <relativePath /> <!-- lookup parent from repository -->
     </parent>
     <groupId>org.sterl.pmw</groupId>
@@ -17,13 +17,26 @@
 
     <properties>
         <java.version>21</java.version>
+        <spt.version></spt.version>
+        <pmw.version>2.0.0-SNAPSHOT</pmw.version>
+        <spt.version>1.6.6-SNAPSHOT</spt.version>
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>org.sterl.pmw</groupId>
             <artifactId>pmw-spring</artifactId>
-            <version>1.1.2-SNAPSHOT</version>
+            <version>${pmw.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.sterl.spring</groupId>
+            <artifactId>spring-persistent-tasks-ui</artifactId>
+            <version>${spt.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.sterl.spring</groupId>
+            <artifactId>spring-persistent-tasks-db</artifactId>
+            <version>${spt.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -37,15 +50,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-quartz</artifactId>
-        </dependency>
 
         <dependency>
             <groupId>org.springdoc</groupId>
             <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
-            <version>2.3.0</version>
+            <version>2.6.0</version>
         </dependency>
 
         <dependency>
@@ -72,6 +81,12 @@
         <dependency>
             <groupId>org.awaitility</groupId>
             <artifactId>awaitility</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.sterl.spring</groupId>
+            <artifactId>spring-persistent-tasks-test</artifactId>
+            <version>${spt.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
