--- a/example/src/main/resources/application.yml
+++ b/example/src/main/resources/application.yml
@@ -6,17 +6,9 @@ spring:
     hibernate:
       ddl-auto: update
     open-in-view: false
-  quartz:
-    job-store-type: jdbc
-    wait-for-jobs-to-complete-on-shutdown: false
-    overwrite-existing-jobs: true
-    jdbc:
-      initialize-schema: always
-    properties:
-      org.quartz.jobStore.isClustered: true
-      org.quartz.scheduler.instanceId: AUTO
-      org.quartz.scheduler.skipUpdateCheck: true
-      org.quartz.scheduler.idleWaitTime: 5000
+
+  liquibase:
+      change-log: classpath:db/changelog/db.changelog-master.xml
 
   datasource:
     url: jdbc:h2:file:./pmw-example
