--- a/example/pom.xml
+++ b/example/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.3.8</version>
+        <version>3.3.12</version>
         <relativePath /> <!-- lookup parent from repository -->
     </parent>
     <groupId>org.sterl.pmw</groupId>
@@ -19,7 +19,7 @@
         <java.version>21</java.version>
         <spt.version></spt.version>
         <pmw.version>2.0.0-SNAPSHOT</pmw.version>
-        <spt.version>1.6.6-SNAPSHOT</spt.version>
+        <spt.version>1.7.0</spt.version>
     </properties>
 
     <dependencies>
@@ -57,12 +57,14 @@
             <version>2.6.0</version>
         </dependency>
 
+        <!-- ClassCastException for java serialization
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
             <scope>runtime</scope>
             <optional>true</optional>
         </dependency>
+        -->
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
