--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -26,7 +26,7 @@ jobs:
       run: mvn -B package --file pom.xml
     - name: Deploy Nexus
       if: ${{ github.ref == 'refs/heads/main' }}
-      run: mvn -B install deploy -DskipTests --file pom.xml
+      run: mvn -B deploy -DskipTests --file pom.xml
       env:
         MAVEN_USERNAME: ${{ secrets.OSSRH_USERNAME }}
         MAVEN_PASSWORD: ${{ secrets.OSSRH_TOKEN }}
