--- a/example/pom.xml
+++ b/example/pom.xml
@@ -39,6 +39,11 @@
             <version>${spt.version}</version>
         </dependency>
         <dependency>
+            <groupId>org.sterl.spring</groupId>
+            <artifactId>spring-persistent-tasks-core</artifactId>
+            <version>${spt.version}</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
