--- a/pom.xml
+++ b/pom.xml
@@ -3,6 +3,13 @@
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>3.3.13</version>
+        <relativePath /> <!-- lookup parent from repository -->
+    </parent>
+
     <groupId>org.sterl.pmw</groupId>
     <artifactId>pmw-root</artifactId>
     <version>2.0.0-SNAPSHOT</version>
@@ -18,6 +25,7 @@
         </license>
     </licenses>
 
+    <url>https://github.com/sterlp/pmw</url>
     <scm>
         <url>https://github.com/sterlp/pmw</url>
     </scm>
@@ -30,24 +38,6 @@
         </developer>
     </developers>
 
-    <parent>
-        <groupId>org.sonatype.oss</groupId>
-        <artifactId>oss-parent</artifactId>
-        <version>9</version>
-        <relativePath />
-    </parent>
-
-    <distributionManagement>
-        <snapshotRepository>
-            <id>ossrh</id>
-            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
-        </snapshotRepository>
-        <repository>
-            <id>ossrh</id>
-            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
-        </repository>
-    </distributionManagement>
-
     <properties>
         <java.version>21</java.version>
         <maven.compiler.source>${java.version}</maven.compiler.source>
@@ -56,19 +46,17 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
         <plantuml.version>1.2025.2</plantuml.version>
-        <spring.version>3.3.12</spring.version>
         <lombok.version>1.18.38</lombok.version>
         <h2.version>2.3.232</h2.version>
         <jackson.version>2.18.2</jackson.version>
 
         <pmd.version>7.2.0</pmd.version>
-
-        <spring.persistent.tasks.version>2.0.0</spring.persistent.tasks.version>
+        <spring.persistent.tasks.version>2.1.0</spring.persistent.tasks.version>
     </properties>
 
     <modules>
-        <module>core</module>
-        <module>spring</module>
+        <module>backend</module>
+        <module>ui</module>
     </modules>
 
     <dependencyManagement>
@@ -220,19 +208,22 @@
                         </execution>
                     </executions>
                 </plugin>
-                <plugin>
-                    <groupId>org.sonatype.plugins</groupId>
-                    <artifactId>nexus-staging-maven-plugin</artifactId>
-                    <version>1.7.0</version>
-                    <extensions>true</extensions>
-                    <configuration>
-                        <serverId>ossrh</serverId>
-                        <nexusUrl>https://oss.sonatype.org/</nexusUrl>
-                        <autoReleaseAfterClose>true</autoReleaseAfterClose>
-                    </configuration>
-                </plugin>
             </plugins>
         </pluginManagement>
+
+        <plugins>
+            <plugin>
+                <groupId>org.sonatype.central</groupId>
+                <artifactId>central-publishing-maven-plugin</artifactId>
+                <version>0.8.0</version>
+                <extensions>true</extensions>
+                <configuration>
+                    <publishingServerId>central</publishingServerId>
+                    <autoPublish>true</autoPublish>
+                    <waitUntil>published</waitUntil>
+                </configuration>
+            </plugin>
+        </plugins>
     </build>
 
     <profiles>
