--- a/ui/package.json
+++ b/ui/package.json
@@ -15,7 +15,9 @@
     "crossroad": "^1.3.3",
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.10",
-    "react-dom": "^19.1.0"
+    "react-bootstrap-icons": "^1.11.6",
+    "react-dom": "^19.1.0",
+    "spt-ui-lib": "^2.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
@@ -31,6 +33,6 @@
     "globals": "^16.0.0",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.30.1",
-    "vite": "^6.3.5"
+    "vite": "^7.0.0"
   }
 }
