--- a/ui/tsconfig.app.json
+++ b/ui/tsconfig.app.json
@@ -23,5 +23,9 @@
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true
   },
-  "include": ["src"]
+  "paths": {
+      "@/*": ["./src/*"],
+  },
+  "include": ["src"],
+  "exclude": ["node_modules", "dist"]
 }
