[ERROR] [ERROR] Some problems were encountered while processing the POMs: [FATAL] Non-parseable POM /Users/sterlp/dev/workset/pmw/backend/pom.xml: Duplicated tag: 'scm' (position: START_TAG seen ...</licenses>\n\n    <scm>... @33:10)  @ line 33, column 10  @ [ERROR] The build could not read 1 project -> [Help 1] [ERROR] [ERROR]   The project  (/Users/sterlp/dev/workset/pmw/backend/pom.xml) has 1 error [ERROR]     Non-parseable POM /Users/sterlp/dev/workset/pmw/backend/pom.xml: Duplicated tag: 'scm' (position: START_TAG seen ...</licenses>\n\n    <scm>... @33:10)  @ line 33, column 10 -> [Help 2] [ERROR] [ERROR] To see the full stack trace of the errors, re-run Maven with the -e switch. [ERROR] Re-run Maven using the -X switch to enable full debug logging. [ERROR] [ERROR] For more information about the errors and possible solutions, please read the following articles: [ERROR] [Help 1] http://cwiki.apache.org/confluence/display/MAVEN/ProjectBuildingException [ERROR] [Help 2] http://cwiki.apache.org/confluence/display/MAVEN/ModelParseException release

--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -17,6 +17,11 @@
 
     <inceptionYear>2022</inceptionYear>
 
+    <url>https://github.com/sterlp/pmw</url>
+    <scm>
+        <url>https://github.com/sterlp/pmw</url>
+    </scm>
+
     <licenses>
         <license>
             <name>MIT License</name>
@@ -42,7 +47,7 @@
             <groupId>org.sterl.spring</groupId>
             <artifactId>spring-persistent-tasks-core</artifactId>
         </dependency>
-        
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
@@ -53,7 +58,7 @@
             <artifactId>lombok</artifactId>
             <optional>true</optional>
         </dependency>
-        
+
         <dependency>
             <groupId>net.sourceforge.plantuml</groupId>
             <artifactId>plantuml</artifactId>
