--- a/doc/mkdocs.yml
+++ b/doc/mkdocs.yml
@@ -5,6 +5,7 @@ theme:
     features:
       - content.code.copy
       - content.code.annotate
+      - search.highlight
 plugins:
   - search
   - tags
